--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -7,8 +7,7 @@
     <com.morphoss.xo.memorize.GameCanvas 
         android:id="@+id/game_canvas"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="4dp">
+        android:layout_height="match_parent">
 
     </com.morphoss.xo.memorize.GameCanvas>
 
