--- a/res/layout/settings_layout.xml
+++ b/res/layout/settings_layout.xml
@@ -29,7 +29,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="top|left"
-            android:layout_marginLeft="100dp"
+            android:layout_marginLeft="150dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/pair_equals" />
 
@@ -38,45 +38,9 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="top|left"
-            android:layout_marginLeft="170dp"
+            android:layout_marginLeft="230dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/pair_non_equals" />
-
-        <ImageButton
-            android:id="@+id/addPicture"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="top|left"
-            android:layout_marginLeft="250dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/import_picture" />
-
-        <ImageButton
-            android:id="@+id/addSound"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="top|left"
-            android:layout_marginLeft="330dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/import_sound" />
-
-        <ImageButton
-            android:id="@+id/addPronounciation"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="top|left"
-            android:layout_marginLeft="410dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/speak" />
-
-        <ImageButton
-            android:id="@+id/addItems"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="top|right"
-            android:layout_marginRight="390dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/pair_add" />
 
         <ImageButton
             android:id="@+id/editClear"
@@ -174,6 +138,25 @@
                     android:layout_marginLeft="155dp"
                     android:layout_marginTop="100dp"
                     android:background="@drawable/speak" />
+
+                <ImageButton
+                    android:id="@+id/addItems"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginTop="200dp"
+                    android:background="@drawable/pair_add" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="110dp"
+                    android:layout_marginTop="200dp"
+                    android:text="@string/addPair"
+                    android:textColor="@android:color/black"
+                    android:textSize="20sp" />
             </FrameLayout>
 
             <FrameLayout
