--- a/res/layout/settings_gallery.xml
+++ b/res/layout/settings_gallery.xml
@@ -9,10 +9,9 @@
         android:layout_width="130dp"
         android:layout_height="130dp"
         android:layout_gravity="center"
-        android:layout_margin="15dp"
+        android:layout_margin="20dp"
         android:gravity="center"
         android:orientation="horizontal"
-        android:padding="20dp"
         android:scaleType="centerInside" />
 
     <com.morphoss.xo.memorize.ObjView
@@ -20,10 +19,17 @@
         android:layout_width="130dp"
         android:layout_height="130dp"
         android:layout_gravity="center"
-        android:layout_marginLeft="150dp"
+        android:layout_marginLeft="60dp"
         android:gravity="center"
         android:orientation="horizontal"
-        android:padding="20dp"
         android:scaleType="centerInside" />
+
+    <ImageButton
+        android:id="@+id/deletePair"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="50dp"
+        android:background="@drawable/delete_pair" />
 
 </LinearLayout>
