--- a/res/layout/settings_layout.xml
+++ b/res/layout/settings_layout.xml
@@ -1,289 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/olpc_delicate_grey"
-    android:gravity="center"
+    android:background="@android:color/white"
     android:orientation="vertical" >
 
-    <FrameLayout
-        android:id="@+id/top"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_gravity="fill_vertical|fill_horizontal"
-        android:layout_weight="0.87"
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|center"
+        android:layout_marginTop="30dp"
+        android:text="@string/settingsTitle"
+        android:textColor="@color/olpc_dark_grey"
+        android:textSize="40sp"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="440dp"
+        android:layout_gravity="bottom|center"
+        android:layout_marginRight="60dp"
+        android:src="@drawable/monkey_settings" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|center"
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="140dp"
+        android:text="@string/createGame"
+        android:textColor="@color/olpc_dark_grey"
+        android:textSize="33sp"
+        android:textStyle="italic" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|center"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="230dp"
+        android:text="@string/nameGame"
+        android:textColor="@color/olpc_dark_grey"
+        android:textSize="25sp" />
+
+    <EditText
+        android:id="@+id/editTxt"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|center"
+        android:layout_marginLeft="250dp"
+        android:layout_marginTop="230dp"
+        android:hint="@string/hintName"
+        android:singleLine="true"
+        android:textColor="@android:color/black" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|center"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="280dp"
+        android:text="@string/typeGame"
+        android:textColor="@color/olpc_dark_grey"
+        android:textSize="25sp" />
+
+    <RadioGroup
+        android:id="@+id/radioType"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|center"
+        android:layout_marginLeft="220dp"
+        android:layout_marginTop="280dp" >
+
+        <RadioButton
+            android:id="@+id/radioAddition"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="@string/radio_addition"
+            android:textColor="@color/olpc_text_grey_color" />
+
+        <RadioButton
+            android:id="@+id/radioSounds"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/radio_sounds"
+            android:textColor="@color/olpc_text_grey_color" />
+
+        <RadioButton
+            android:id="@+id/radioLetters"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/radio_letters"
+            android:textColor="@color/olpc_text_grey_color" />
+    </RadioGroup>
+
+    <Button
+        android:id="@+id/nextBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|bottom"
+        android:layout_marginBottom="40dp"
+        android:layout_marginRight="70dp"
         android:background="@color/olpc_dark_grey"
-        android:orientation="vertical" >
+        android:text="@string/nextGame"
+        android:textColor="@color/olpc_delicate_grey" />
 
-        <ImageButton
-            android:id="@+id/pairEquals"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="top|left"
-            android:layout_marginLeft="100dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/pair_equals" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="80dp"
+        android:text="@string/modifyGame"
+        android:textColor="@color/olpc_text_grey_color"
+        android:textSize="25sp" />
 
-        <ImageButton
-            android:id="@+id/pairNonEquals"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="top|left"
-            android:layout_marginLeft="220dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/pair_non_equals" />
-
-        <TextView
-            android:id="@+id/saveGameText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|right"
-            android:layout_marginRight="410dp"
-            android:text="@string/saveGame"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" />
-
-        <ImageButton
-            android:id="@+id/saveGame"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="top|right"
-            android:layout_marginRight="350dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/save" />
-
-        <TextView
-            android:id="@+id/playGameText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|right"
-            android:layout_marginRight="230dp"
-            android:text="@string/playGame"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" />
-
-        <ImageButton
-            android:id="@+id/playGame"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="top|right"
-            android:layout_marginRight="170dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/play_game" />
-
-        <ImageButton
-            android:id="@+id/editClear"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="top|right"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/edit_clear" />
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/bottom"
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_gravity="fill_vertical|fill_horizontal"
-        android:layout_weight="0.13"
-        android:orientation="vertical" >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/olpc_delicate_grey"
-            android:gravity="center"
-            android:orientation="horizontal" >
-
-            <FrameLayout
-                android:id="@+id/left1"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_gravity="fill_vertical|fill_horizontal"
-                android:layout_weight="0.05"
-                android:orientation="horizontal" >
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="25dp"
-                    android:layout_marginTop="20dp"
-                    android:text="@string/preview"
-                    android:textColor="@android:color/black"
-                    android:textSize="20sp" />
-
-                <com.morphoss.xo.memorize.ObjView
-                    android:id="@+id/obj_view_1"
-                    android:layout_width="130dp"
-                    android:layout_height="130dp"
-                    android:layout_gravity="top"
-                    android:layout_marginLeft="25dp"
-                    android:layout_marginTop="60dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="25dp"
-                    android:text="@string/textTitle"
-                    android:textColor="@android:color/black"
-                    android:textSize="20sp" />
-
-                <EditText
-                    android:id="@+id/autoText1"
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="25dp"
-                    android:layout_marginTop="40dp"
-                    android:hint="@string/editText"
-                    android:singleLine="true"
-                    android:textColor="@color/olpc_dark_grey" />
-
-                <ImageButton
-                    android:id="@+id/addPictureLeft"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="25dp"
-                    android:layout_marginTop="100dp"
-                    android:background="@drawable/import_picture" />
-
-                <ImageButton
-                    android:id="@+id/addSoundLeft"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="90dp"
-                    android:layout_marginTop="100dp"
-                    android:background="@drawable/import_sound" />
-
-                <ImageButton
-                    android:id="@+id/addPronounciationLeft"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="155dp"
-                    android:layout_marginTop="100dp"
-                    android:background="@drawable/speak" />
-
-                <ImageButton
-                    android:id="@+id/addItems"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="40dp"
-                    android:layout_marginTop="200dp"
-                    android:background="@drawable/pair_add" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="110dp"
-                    android:layout_marginTop="200dp"
-                    android:text="@string/addPair"
-                    android:textColor="@android:color/black"
-                    android:textSize="20sp" />
-            </FrameLayout>
-
-            <FrameLayout
-                android:id="@+id/left2"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_gravity="fill_vertical|fill_horizontal"
-                android:layout_weight="0.05"
-                android:orientation="horizontal" >
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="25dp"
-                    android:layout_marginTop="20dp"
-                    android:text="@string/preview"
-                    android:textColor="@android:color/black"
-                    android:textSize="20sp" />
-
-                <com.morphoss.xo.memorize.ObjView
-                    android:id="@+id/obj_view_2"
-                    android:layout_width="130dp"
-                    android:layout_height="130dp"
-                    android:layout_gravity="top"
-                    android:layout_marginLeft="25dp"
-                    android:layout_marginTop="60dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="25dp"
-                    android:text="@string/textTitle"
-                    android:textColor="@android:color/black"
-                    android:textSize="20sp" />
-
-                <EditText
-                    android:id="@+id/autoText2"
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="25dp"
-                    android:layout_marginTop="40dp"
-                    android:hint="@string/editText"
-                    android:singleLine="true"
-                    android:textColor="@color/olpc_dark_grey" />
-
-                <ImageButton
-                    android:id="@+id/addPictureRight"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="25dp"
-                    android:layout_marginTop="100dp"
-                    android:background="@drawable/import_picture" />
-
-                <ImageButton
-                    android:id="@+id/addSoundRight"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="90dp"
-                    android:layout_marginTop="100dp"
-                    android:background="@drawable/import_sound" />
-
-                <ImageButton
-                    android:id="@+id/addPronounciationRight"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="155dp"
-                    android:layout_marginTop="100dp"
-                    android:background="@drawable/speak" />
-            </FrameLayout>
-
-            <FrameLayout
-                android:id="@+id/right"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_gravity="fill_vertical|fill_horizontal"
-                android:layout_weight="0.4"
-                android:background="@android:color/black"
-                android:orientation="horizontal" >
-
-                <ScrollView
-                    android:id="@+id/scrollView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" >
-
-                    <LinearLayout
-                        android:id="@+id/newItems"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical" >
-                    </LinearLayout>
-                </ScrollView>
-            </FrameLayout>
-        </LinearLayout>
-    </FrameLayout>
-
-</LinearLayout>
+</FrameLayout>
