--- a/res/layout/settings_layout.xml
+++ b/res/layout/settings_layout.xml
@@ -51,6 +51,7 @@
         android:layout_marginLeft="250dp"
         android:layout_marginTop="230dp"
         android:hint="@string/hintName"
+        android:inputType="text"
         android:singleLine="true"
         android:textColor="@android:color/black" />
 
@@ -110,7 +111,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="80dp"
+        android:layout_marginLeft="70dp"
         android:text="@string/modifyGame"
         android:textColor="@color/olpc_text_grey_color"
         android:textSize="25sp" />
