--- a/res/layout/addition_layout.xml
+++ b/res/layout/addition_layout.xml
@@ -99,8 +99,8 @@
             android:textSize="20sp" />
 
         <ImageView
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
+            android:layout_width="280dp"
+            android:layout_height="150dp"
             android:layout_gravity="bottom|right"
             android:src="@drawable/monkey_bush" />
     </FrameLayout>
