--- a/res/layout/sounds_layout.xml
+++ b/res/layout/sounds_layout.xml
@@ -146,6 +146,28 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|right"
+            android:layout_marginRight="300dp"
+            android:layout_marginTop="25dp"
+            android:text="@string/numberPairs"
+            android:textColor="@android:color/white"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/numberPairsCreated"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|right"
+            android:layout_marginRight="270dp"
+            android:layout_marginTop="25dp"
+            android:textColor="@android:color/white"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|right"
             android:layout_marginRight="80dp"
             android:layout_marginTop="25dp"
             android:text="@string/saveGame"
