--- a/res/layout/menu_text_img.xml
+++ b/res/layout/menu_text_img.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
- android:layout_width="fill_parent"
- android:layout_height="wrap_content"
- android:orientation="vertical"
- android:padding="3dp">
-    <ImageView
-         android:id="@+id/image"
-         android:layout_width="50dp"
-         android:layout_height="50dp"
-         android:src="@+drawable/size4"/>
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="3dp" >
 
-     <TextView
-         android:layout_toRightOf="@+id/image"
-         android:padding="2dip"
-         android:layout_marginLeft="5dip"
-         android:id="@+id/company"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"/>
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@+drawable/new_game_created" />
+
+    <TextView
+        android:id="@+id/company"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dip"
+        android:layout_toRightOf="@+id/image"
+        android:padding="2dip" />
+
 </RelativeLayout>
