--- a/res/layout/settings_layout.xml
+++ b/res/layout/settings_layout.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|center"
-        android:layout_marginLeft="150dp"
+        android:layout_marginLeft="180dp"
         android:layout_marginTop="140dp"
         android:text="@string/createGame"
         android:textColor="@color/olpc_dark_grey"
@@ -111,9 +111,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:layout_marginBottom="70dp"
         android:layout_marginLeft="70dp"
         android:text="@string/modifyGame"
         android:textColor="@color/olpc_text_grey_color"
         android:textSize="25sp" />
+
+    <ListView
+        android:id="@+id/listview"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
+        android:layout_marginLeft="90dp"
+        android:layout_marginTop="240dp" />
 
 </FrameLayout>
