--- a/res/layout/file_view.xml
+++ b/res/layout/file_view.xml
@@ -12,15 +12,14 @@
         android:layout_marginTop="5dip"
         android:singleLine="true"
         android:text="@+id/TextView01"
-        android:textStyle="bold" >
-    </TextView>
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/TextView02"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dip"
-        android:text="@+id/TextView02" >
-    </TextView>
+        android:text="@+id/TextView02" />
 
 </LinearLayout>
